Complete video 21, basic functionalities were finished

--- a/StudentProj/StudentCode/WinStudent/WinStudent.csproj
+++ b/StudentProj/StudentCode/WinStudent/WinStudent.csproj
@@ -104,6 +104,9 @@
     <EmbeddedResource Include="FrmGradeList.resx">
       <DependentUpon>FrmGradeList.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmLogin.en-GB.resx">
+      <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
