--- a/StudentProj/StudentCode/WinStudent/WinStudent.csproj
+++ b/StudentProj/StudentCode/WinStudent/WinStudent.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandInfo.cs" />
     <Compile Include="FrmAddClass.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +65,18 @@
     </Compile>
     <Compile Include="FrmClassList.Designer.cs">
       <DependentUpon>FrmClassList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEditClass.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEditClass.Designer.cs">
+      <DependentUpon>FrmEditClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmEditStudent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmEditStudent.Designer.cs">
+      <DependentUpon>FrmEditStudent.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmGradeList.cs">
       <SubType>Form</SubType>
@@ -92,6 +105,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagObject.cs" />
     <EmbeddedResource Include="FrmAddClass.resx">
       <DependentUpon>FrmAddClass.cs</DependentUpon>
     </EmbeddedResource>
@@ -100,6 +114,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmClassList.resx">
       <DependentUpon>FrmClassList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEditClass.resx">
+      <DependentUpon>FrmEditClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmEditStudent.resx">
+      <DependentUpon>FrmEditStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGradeList.resx">
       <DependentUpon>FrmGradeList.cs</DependentUpon>
